--- a/_config.yml
+++ b/_config.yml
@@ -1,52 +1,30 @@
-#Jekyll configuration
+# Dependencies
+markdown:         kramdown
+highlighter:      pygments
 
-title: Xingjian's homepage
+# Permalinks
+permalink:        pretty
 
-email: xingjian.tsinghua@gmail.com
+# Setup
+title:            Xingjian Xuanyuan
+tagline:          'Personal Website'
+description:      'Tao is to the world what rivers are to the ocean.'
+baseurl:          /
 
-description: >- # this means to ignore newlines until "baseurl:"
-  Tao is to the world what rivers are to the ocean.
+# Gems
+plugins:
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-seo-tag
 
-baseurl: ""
-url: "https://XingjianXuanyuan.github.io"
-github_username: XingjianXuanyuan
+author:
+  name:           'Xingjian Xuanyuan'
+  url:            https://github.com/XingjianXuanyuan
 
-#URL structure
-permalink: /:title
+paginate:         5
 
-markdown: GFM
+# Custom vars
+version:          1.0
 
-#Build settings
-remote_theme: pmarsceill/just-the-docs
-
-# Enable or disable the site search
-search_enabled: true
-
-# --- Navigation bar options --- #
-# List of links in the navigation bar
-
-# Aux links for upper right navigation link
-aux_links:
-  "Go to Github profile >":
-    - "https://github.com/XingjianXuanyuan"
-
-# Inlucde pages into processing
-include: ["_pages", "_posts"]
-
-# Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2022 XingjianXuanyuan. Distributed under the <a href=\"https://github.com/XingjianXuanyuan/xingjianxuanyuan.github.io/tree/master/LICENSE\">MIT license</a>."
-
-# Heading anchor links appear on hover over h1-h6 tags in page content
-heading_anchors: true
-
-# Google Analytics Tracking (optional)
-# ga_tracking:
-
-#Includes an icon in the footer for each user name
-# footer-links:
-  # github: XingjianXuanyuan
-  # permalink: /:title/
-
-# Exclude from processing.
-# exclude:
-  # - Gemfile
+github:
+  repo:           https://github.com/XingjianXuanyuan/XingjianXuanyuan.github.io
