--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ paginate:         5
 version:          1.0
 
 github:
-  repo:           https://github.com/XingjianXuanyuan/XingjianXuanyuan.github.io/tree/main/
+  repo:           https://github.com/XingjianXuanyuan/XingjianXuanyuan.github.io/
