--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 # Setup
 title:            Xingjian Xuanyuan
 tagline:          'Personal Website'
-description:      'Tao is to the world what rivers are to the ocean.'
+description:      '譬大道之在天下猶川谷之於江海'
 baseurl:          https://XingjianXuanyuan.github.io/
 
 include: ["_pages", "_posts"]
